# MomentoMori

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yaml  test.yaml
momento_mori/: __init__.py  app.py  dependencies.py  flask_app.py  main.py  models.py  settings.py  template_utils.py
momento_mori/static/: style.css
momento_mori/templates/: head.html  landing.html  layout.html  result.html  too_old.html
requirements/: prod.txt
tests/: __init__.py  test_api.py
