[project]
name = "momento-mori"
version = "0.2.0"
description = "Life expectancy/Anti Procrastination App"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi==0.115.6",          # https://github.com/fastapi/fastapi
  "jinja2>=3.1.6",             # https://github.com/pallets/jinja
  "environs==14.1.1",
  "python-multipart>=0.0.20",  # https://github.com/Kludex/python-multipart
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",  # https://github.com/encode/httpx
  "mypy==1.17.1",   # https://github.com/python/mypy
  "pytest>=8.0.0",  # https://github.com/pytest-dev/pytest
  "uvicorn[standard]>=0.34.0", # https://github.com/encode/uvicorn
  "ruff==0.12.10",  # https://github.com/astral-sh/ruff
]

lambda = [
  "mangum==0.19.0", # https://mangum.fastapiexpert.com/
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint.isort]
force-single-line = true
